--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="note.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="课堂笔记.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
